--- a/html/sub_pages/basketball.html
+++ b/html/sub_pages/basketball.html
@@ -6,7 +6,7 @@
     <title>Basketball - Roni Doka</title>
 </head>
 <body>
-<h5> <a href="/index.html"> <u> <em> Home </em> </u> </a> </h5>
+<h5> <a href="../../index.html"> <u> <em> Home </em> </u> </a> </h5>
 <h1> Basketball </h1>  
 </body>
 </html>
