--- a/html/sub_pages/musicprod.html
+++ b/html/sub_pages/musicprod.html
@@ -6,7 +6,7 @@
     <title>Music Production - Roni Doka</title>
 </head>
 <body>
-<h5> <a href="/index.html"> <u> <em> Home </em> </u> </a> </h5>
+<h5> <a href="../../index.html"> <u> <em> Home </em> </u> </a> </h5>
 <h1>Music Production</h1>  
 
 <p>
