--- a/html/sub_pages/projects.html
+++ b/html/sub_pages/projects.html
@@ -9,7 +9,7 @@
     
 </body>
 </html>
-<h5> <a href="/index.html"> <u> <em> Home </em> </u> </a> </h5>
+<h5> <a href="../../index.html"> <u> <em> Home </em> </u> </a> </h5>
 <h1>Projects</h1>
 <ul>
     <li> <a href="projects/FlashingLEDArduino.html"> Flashing LED </a> - A simple LED-blinking circuit programmed with Arduino </li>
